# pipes

./: .gitignore  CMakeLists.txt  examples.cxx  pipes.hxx
